Chrome is doo doo (fixed the Units panel getting too big on chrome)

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -14,7 +14,7 @@
 
 .panel{
     width:100%;
-    height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
